# risk-quant-engine

./: .dockerignore  .gitignore  BLANK_TEMPLATE_SUMMARY.md  CODE_QUALITY_REPORT.md  COMPLETE_DASHBOARD_SUMMARY.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  COMPLETE_PROJECT_SUMMARY.md  DASHBOARD_COMPLETE.md  DASHBOARD_UPDATE_COMPLETE.md  Dockerfile  FINAL_DASHBOARD_SUMMARY.md  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_PROJECT_SUMMARY.md  INTEGRATION_COMPLETE.md  KPI_KRI_DASHBOARD_COMPLETE.md  LEC_FUNCTIONALITY_REFERENCE.md  MASTER_PROJECT_SUMMARY.md  Makefile  PROJECT_COMPLETE.md  PROJECT_SUMMARY.md  QUANTIFY_REGISTER_SUMMARY.md  QUICK_START.md  README.md  RISK_MC_SUMMARY.md  RISK_REGISTER_INTEGRATION.md  STREAMLIT_DASHBOARD_README.md  pyproject.toml  pytest.ini  requirements.txt  run.bat  run.sh
artifacts/: quantified_register.csv  quantified_register_demo.csv  user_quantified_register.csv
data/: README.md  SCHEMA.md  blank_risk_register_template.csv  sample_risk_register.csv  user_risk_register.csv
docs/: DASHBOARD_GUIDE.md
scripts/: analyze_user_portfolio.py  demo_portfolio.py  demo_risk_register.py  quantify_demo.py  run_dashboard.bat  run_dashboard.sh
src/: __init__.py  curves.py  dashboard.py  monte_carlo.py  risk_mc_dashboard.py  risk_register.py
src/risk_mc/: __init__.py  dashboard_kri.py  distributions.py  io.py  lec.py  metrics.py  plots.py  risk_register.py  simulate.py
tests/: __init__.py  test_curves.py  test_dashboard.py  test_dashboard_kri.py  test_distributions.py  test_io.py  test_lec.py  test_monte_carlo.py  test_quantify_register.py  test_risk_register.py  test_simulate.py
